# bio_seq-v1

./: README.md  pyproject.toml
bio_seq_v1/: cli.py  fasta.py  stats.py
bio_seq_v1/bio_seq_v1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: base_count.py  gc_content.py  length.py  rev_comp.py
tests/: test_fasta_stats.py
tests/data/: single.fasta
