[project]
name = "bio_seq_v1"
version = "0.1.0"
description = "A small bioinformatics sequence analysis package"
authors = [
    { name="Priyal Tripathi", email="priyaltripathi2910@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"