# pyproject.toml for bio_seq_v1
[project]
name = "bio_seq_v1"
version = "0.1.0"
description = "A Python package for bioinformatics sequence analysis (FASTA parsing, GC content, reverse complement, base counts)"
authors = [
    { name = "Priyal Tripathi", email = "priyaltripathi2910@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text="MIT" }
keywords = ["bioinformatics", "sequence", "FASTA", "GC content", "reverse complement"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "tabulate>=0.9.0"
]

[project.scripts]
bioseq = "bio_seq_v1.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Optional: tool configurations
[tool.setuptools.packages.find]
where = ["."]
include = ["bio_seq_v1*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"